# datakoro

./: .env  .gitignore  .prettierrc  BSDmakefile  Cargo.toml  DEVELOPMENT.md  Dockerfile  GNUmakefile  INSTALL-PREPRODUCTION-TEST.md  Makefile  README.md  datakoro.service  diesel.toml  docker-compose.yml  entrypoint.sh  nginx.certbot.conf  nginx.conf  nginx.prod.conf  package-lock.json  package.json  svelte.config.js
.devcontainer/: devcontainer.json  docker-compose.overrides.yml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
client/: Cargo.toml
database/: Cargo.toml
database/src/: lib.rs
database/src/migration/2024-01-24-145950_datakoro_initial_setup/: up.sql
gui/: Cargo.toml
gui/src/: lib.rs
prisma/: schema.prisma
prisma/migrations/20240831164220_init/: migration.sql
prisma/migrations/20240831164221_constants/: migration.sql
prisma/migrations/20240831164222_first_concepts/: migration.sql
prisma/sql/: insertMagnitudeConcept.sql
server/: Cargo.toml
server/hydration/: Cargo.toml
server/src/: lib_hydration.rs  main.rs
server/src/config/: server.rs
src/: app.html  app.scss  hooks.server.ts
src/lib/graph/application/dto/: DtoActiveRelation.ts  DtoConcept.ts  DtoConceptName.ts  DtoNumberConcept.ts  DtoRawRelation.ts  DtoTextConcept.ts
src/lib/graph/domain/model/: Concept.ts  ConceptId.ts  ConceptName.ts  MagnitudeConcept.ts  NumberConcept.ts  Relation.ts  TextConcept.ts
src/lib/graph/domain/repository/: GraphRepository.ts
src/lib/graph/infrastructure/prisma/model/: DbActiveRelation.ts  DbConcept.ts  DbMagnitudeConcept.ts  DbNumberConcept.ts  DbRawRelation.ts  DbTextConcept.ts
src/lib/graph/infrastructure/prisma/repository/: DbGraphRepository.ts
src/lib/graph/infrastructure/prisma/service/: DbActiveRelationManager.ts  DbGraphManager.ts  DbNumberConceptManager.ts  DbRawRelationManager.ts  DbTextConceptManager.ts
src/lib/graph/infrastructure/prisma/statement/: ActiveRelationSqlExecutor.ts  ConceptSqlExecutor.ts  MagnitudeConceptSqlExecutor.ts  NumberConceptSqlExecutor.ts  RawRelationSqlExecutor.ts  TextConceptSqlExecutor.ts
src/lib/graph/infrastructure/svelte/widget/: ConceptUiName.svelte
src/lib/operation/domain/model/: Operation.ts  OperationConcept.ts  RelationRule.ts  Transaction.ts  TransactionConcept.ts  TransactionConceptDate.ts
src/lib/operation/domain/service/: OperationService.ts
src/lib/operation/infrastructure/prisma/model/: DbActiveRelationRule.ts  DbOperation.ts  DbOperationConcept.ts  DbRawRelationRule.ts  DbTransaction.ts  DbTransactionConcept.ts
src/lib/operation/infrastructure/prisma/service/: DbOperationConceptManager.ts  DbOperationService.ts  DbRelationRuleManager.ts  DbTransactionConceptManager.ts
src/lib/operation/infrastructure/prisma/statement/: ActiveRelationRuleSqlExecutor.ts  OperationConceptSqlExecutor.ts  RawRelationRuleSqlExecutor.ts  TransactionConceptSqlExecutor.ts
src/lib/shared/domain/model/: DomainException.ts  FieldOrder.ts  Filter.ts  MekadimoDate.ts  PaginationCriteria.ts  SearchCriteria.ts  Transaction.ts  UiValue.ts  ValueObject.ts
src/lib/shared/domain/service/: TransactionService.ts
src/lib/shared/infrastructure/prisma/model/: DbFieldOrderDirection.ts  DbFilter.ts  DbModel.ts  DbTransaction.ts  Prisma.ts
src/lib/shared/infrastructure/prisma/service/: DbTransactionService.ts
src/lib/shared/infrastructure/svelte/context/: GlobalContextProvider.svelte
src/lib/shared/infrastructure/svelte/i18n/: I18n.ts
src/lib/shared/infrastructure/svelte/i18n/locale/en/: ExceptionEN.ts  MainEN.ts
src/lib/shared/infrastructure/svelte/i18n/locale/es/: ExceptionES.ts  MainES.ts
src/lib/shared/infrastructure/svelte/i18n/locale/keys/: ExceptionKeys.ts  MainKeys.ts
src/lib/shared/infrastructure/svelte/model/: AppGlobalState.ts  GlobalState.ts  SvelteAppGlobalState.ts
src/lib/shared/infrastructure/svelte/model/i18n/: en.ts  es.ts
src/lib/shared/infrastructure/svelte/page/: HomePage.svelte  Layout.svelte  ViewPage.svelte
src/lib/shared/infrastructure/svelte/page/view/: ConceptAbstractionViewPage.svelte  DatakoroLoginConceptViewPage.svelte  DatakoroSearchConceptViewPage.svelte
src/lib/shared/infrastructure/svelte/section/: ChangeLanguageModal.svelte  Footer.svelte  TopBar.svelte
src/lib/shared/infrastructure/svelte/widget/: UiDate.svelte  UiDateTime.svelte  UiGregorianDate.svelte  UiMekadimoDate.svelte  ViewHyperlink.svelte
src/lib/user/domain/model/: ServerUserConcept.ts  ServerUserSession.ts  UserBrowser.ts  UserConcept.ts  UserPlatform.ts  UserSession.ts
src/lib/user/infrastructure/prisma/model/: DbUserConcept.ts  DbUserSession.ts
src/lib/user/infrastructure/prisma/service/: DbUserManager.ts
src/lib/user/infrastructure/prisma/statement/: UserConceptSqlExecutor.ts  UserSessionSqlExecutor.ts
src/lib/view/application/dto/: DtoConceptAbstractionView.ts  DtoDatakoroLoginConceptView.ts  DtoDatakoroSearchConceptView.ts  DtoFrontendView.ts  DtoView.ts
src/lib/view/application/use_case/: FrontendViewUseCase.ts
src/lib/view/domain/model/: ConceptAbstractionView.ts  DatakoroLoginConceptView.ts  DatakoroSearchConceptView.ts  SupportedLanguage.ts  View.ts
src/lib/view/infrastructure/svelte/page/: ViewPage.svelte
src/lib/view/infrastructure/svelte/page/view/: ConceptAbstractionViewPage.svelte  DatakoroLoginConceptViewPage.svelte  DatakoroSearchConceptViewPage.svelte
src/routes/: +page.server.ts
src/routes/[languageCode]/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/[languageCode]/view/: +page.server.ts  +page.svelte
tui/: Cargo.toml
