[workspace]
members = [
    "app",
    "cli",
    "client",
    "database",
    "gui",
    "server",
    "tui",
]
resolver = "2"

[workspace.dependencies]
actix-files = { version = "0.6.2" }
actix-identity = { version = "0.6.0" }
actix-multipart = { version = "0.6.1" }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = { version = "4.4.0", features = ["macros", "rustls"] }
cfg-if = "1"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["chrono", "postgres", "uuid", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
leptos = { version = "0.5.4", features = ["nightly"] }
leptos_actix = { version = "0.5.4" }
leptos_icons = { version = "0.1.0", features = [] }
leptos_meta = { version = "0.5.4", features = ["nightly"] }
leptos_router = { version = "0.5.4", features = ["nightly"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wasm-bindgen = { version = "=0.2.87", features = ["serde-serialize"] }
web-sys = "0.3.63"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'