[workspace]
members = [
    "app",
    "client",
    "database",
    "gui",
    "server",
    "server/hydration",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
actix-files = { version = "0.6.2" }
actix-identity = { version = "0.6.0" }
actix-multipart = { version = "0.6.1" }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = { version = "4.4.0", features = ["macros", "rustls"] }
cfg-if = "1"
chrono = { version = "0.4.31", features = ["serde"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
diesel = { version = "2.1.4", features = ["chrono", "postgres", "uuid", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29" }
leptos = { version = "0.5.7", features = ["nightly"] }
leptos_actix = { version = "0.5.7" }
leptos_icons = { version = "0.2.1", features = [] }
leptos_meta = { version = "0.5.7", features = ["nightly"] }
leptos_router = { version = "0.5.7", features = ["nightly"] }
log = "0.4.20"
rand = { version = "0.8.5" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
wasm-bindgen = { version = "=0.2.90", features = ["serde-serialize"] }
web-sys = "0.3.63"

[[workspace.metadata.leptos]]
assets-dir = "gui/assets"
bin-default-features = false
bin-features = []
bin-package = "datakoro_server"
browserquery = "defaults"
end2end-cmd = "npx playwright test" # TODO
end2end-dir = "end2end" # TODO
env = "DEV"
lib-default-features = false
lib-features = []
lib-package = "datakoro_server_hydration"
name = "site"
reload-port = 8002
site-addr = "0.0.0.0:8001"
site-pkg-dir = "pkg"
site-root = "target/site"
style-file = "gui/src/lib.scss"
watch = false
