[package]
authors = ["Lajto"]
description = "Datakoro app."
edition = "2021"
license = "AGPLv3"
name = "datakoro_app"
repository = "https://github.com/mekadimo/datakoro"
version = "0.1.0"

[[bin]]
name = "datakoro_app"
path = "./src/main.rs"

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
datakoro_gui = { path = "../gui", features = ["csr"] }
leptos = { workspace = true, features = [ "csr" ] }
log.workspace = true
wasm-bindgen.workspace = true
