[package]
authors = ["Lajto"]
description = "Datakoro client."
edition = "2021"
license = "AGPLv3"
name = "datakoro_client"
repository = "https://github.com/mekadimo/datakoro"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib.rs"

[features]
csr = []
default = []
hydrate = []
ssr = []
