[package]
authors = ["Lajto"]
description = "Datakoro database."
edition = "2021"
license = "AGPLv3"
name = "datakoro_database"
repository = "https://github.com/mekadimo/datakoro"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib.rs"

[dependencies]
chrono.workspace = true
diesel.workspace = true
