[package]
authors = ["Lajto"]
description = "Datakoro server."
edition = "2021"
license = "AGPLv3"
name = "datakoro_server"
repository = "https://github.com/mekadimo/datakoro"
version = "0.1.0"

[dependencies]
actix-files = { workspace = true, optional = true }
actix-identity = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }
actix-session = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
leptos.workspace = true
leptos_actix = { workspace = true, optional = true }
leptos_icons.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
csr = []
default = []
hydrate = []
ssr = []