[package]
authors = ["Lajto"]
description = "Datakoro server hydration."
edition = "2021"
license = "AGPLv3"
name = "datakoro_server_hydration"
repository = "https://github.com/mekadimo/datakoro"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "../src/lib_hydration.rs"

[dependencies]
leptos = { workspace = true, features = [ "hydrate" ] }