[package]
authors = ["Lajto"]
description = "Datakoro server hydration."
edition = "2021"
license = "AGPLv3"
name = "datakoro_server_hydration"
repository = "https://github.com/mekadimo/datakoro"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "../src/lib_hydration.rs"

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
datakoro_gui = { path = "../../gui", features = ["hydrate"] }
leptos = { workspace = true, features = [ "hydrate" ] }
log.workspace = true
wasm-bindgen.workspace = true
